# KeepDeck

./: .gitignore  Cargo.toml  README.md  build-macos.sh  index.html  install.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: build-macos.yml  ci.yml  release.yml  version-bump.yml
.verify-fixture/: logic.ts  vite.config.ts
crates/keepdeck-agents/: Cargo.toml
crates/keepdeck-env/: Cargo.toml
crates/keepdeck-git/: Cargo.toml
crates/keepdeck-git/src/: branch.rs  cmd.rs  diff.rs  error.rs  exclude.rs  head.rs  lib.rs  log.rs  provenance.rs  repo.rs  status.rs  worktree.rs
crates/keepdeck-git/tests/: log.rs  path_env.rs  provenance.rs  status.rs  worktree.rs
crates/keepdeck-history/: Cargo.toml
crates/keepdeck-history/src/: codex_hook.rs  lib.rs
crates/keepdeck-index/: Cargo.toml
crates/keepdeck-pty/: Cargo.toml
crates/keepdeck-pty/examples/: spawn_timing.rs
crates/keepdeck-pty/src/: lib.rs  path.rs
crates/keepdeck-pty/tests/: env_defaults.rs  kill_tree.rs  pty_session.rs
crates/keepdeck-voice/: Cargo.toml
crates/keepdeck-voice/src/: audio.rs  capture.rs  engine.rs  lib.rs  parakeet.rs
docs/: plugin-container.md  usage.md
patches/: @xterm__xterm@5.5.0.patch
plugins/claude/: manifest.json  package.json
plugins/codex/: manifest.json  package.json
plugins/files/: manifest.json  package.json
plugins/git/: manifest.json  package.json
plugins/kimi/: manifest.json  package.json
plugins/opencode/: manifest.json  package.json
plugins/run/: manifest.json  package.json
plugins/sample/: manifest.json  package.json
plugins/voice/: manifest.json  package.json
scripts/: build-plugins.mjs  build-plugins.test.mjs  github-release-state.mjs  github-release-state.test.mjs  macos-app.sh  pack-plugin.mjs  pack-plugin.test.mjs  release-changelog.mjs  release-changelog.test.mjs  release-manifest.mjs  release-manifest.test.mjs  release-notes.mjs  release-notes.test.mjs  version-bump-workflow.test.mjs  version-bump.mjs  version-bump.test.mjs  workflows.test.mjs
src/: App.css  App.tsx  agents.test.ts  agents.ts  deck.test.ts  deck.ts  hotkeys.test.ts  hotkeys.ts  ipc.ts  layout.test.ts  layout.ts  main.tsx  panes.test.ts  panes.ts  workspaces.test.ts  workspaces.ts  worktree.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build.rs  tauri.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: kd-codex-hook.sh  kd-session-hook.sh  session-reporter.js
src-tauri/src/: agents.rs  app_updater.rs  apps.rs  bridge.rs  clipboard.rs  codex_app_server.rs  containment.rs  dnd.rs  downloads.rs  fswatch.rs  head_watch.rs  history.rs  journal.rs  kimi_usage.rs  lib.rs  links.rs  logging.rs  main.rs  menu.rs  migration.rs  paths.rs  plugins_fs.rs  plugins_fs_write.rs  plugins_sqlite.rs  ports.rs  project_fs.rs  project_git.rs  rollout_tail.rs  session.rs  session_tail.rs  sessions.rs  skills.rs  state.rs  usage_history.rs  voice.rs  worktree.rs
src/agent/: AgentPane.test.tsx  AgentPane.tsx
src/app/: commandRegistry.ts  coreCommands.test.ts  coreCommands.ts  deckStore.test.ts  deckStore.ts  downloadManager.test.ts  downloadManager.ts  dragDrop.test.ts  dragDrop.ts  dragManager.test.tsx  dragManager.ts  fileOpenManager.test.ts  fileOpenManager.ts  historyScan.test.ts  historyScan.ts  ids.test.ts  ids.ts  notificationCenter.test.ts  notificationCenter.ts  notificationNavigation.test.ts  notificationNavigation.ts  notificationProducers.test.ts  notificationProducers.ts  overlayVisibility.test.ts  overlayVisibility.ts  paneInput.test.ts  paneInput.ts  paneMembership.ts  paneSpawns.ts  pluginHealth.test.ts  pluginHealth.ts  pluginKv.test.ts  pluginKv.ts  pluginManager.ts  pluginMigrations.test.ts  pluginMigrations.ts  pluginSettingsValues.test.ts  pluginSettingsValues.ts  pluginSnapshots.test.ts  pluginSnapshots.ts  (+100 more)
src/components/: DeckStage.test.tsx  DeckStage.tsx  PluginOverlays.tsx
src/domain/: agentLocation.test.ts  agentLocation.ts  agents.test.ts  agents.ts  changelog.test.ts  changelog.ts  clipboard.test.ts  clipboard.ts  deck.test.ts  deck.ts  dnd.test.ts  dnd.ts  hotkeys.test.ts  hotkeys.ts  idSequence.ts  json.ts  keymap.test.ts  layout.ts  links.test.ts  migrations.test.ts  migrations.ts  panes.test.ts  panes.ts  persist.test.ts  persist.ts  railDnd.test.ts  railDnd.ts  runCriteria.test.ts  runCriteria.ts  runPresets.test.ts  runPresets.ts  runSessions.test.ts  runSessions.ts  settings.test.ts  settings.ts  spawnPlans.test.ts  spawnPlans.ts  workspaceInstance.ts  workspaces.test.ts  workspaces.ts
src/ipc/: agents.ts  app.ts  clipboard.ts  dialogs.ts  downloads.ts  history.ts  journal.ts  log.test.ts  log.ts  menu.ts  notify.test.ts  notify.ts  plugins.ts  pluginsFsWrite.ts  ports.ts  projectFs.ts  projectGit.ts  session.test.ts  session.ts  sessions.ts  settings.ts  skills.test.ts  skills.ts  state.ts  updater.ts  usage.test.ts  usage.ts  usageHistory.ts  voice.ts  webview.ts  window.ts  worktree.ts
src/plugins/: index.ts  react.ts
src/styles/: base.css  buttons.css  chip.css  collapse.css  confirm.css  deck.css  dock.css  files.css  form.css  git.css  history.css  index.css  minimize.css  notifications.css  overlay.css  pane.css  peek.css  rail.css  run.css  settings.css  settings.test.ts  setup.css  skills.css  stats.css  terminal.css  usage.css
src/terminal/: TerminalPane.tsx  clipboard.test.ts  clipboard.ts  dnd.test.ts  dnd.ts  keymap.ts  links.test.ts  links.ts
src/ui/: AgentGlyph.tsx  Chip.tsx  CloseButton.tsx  Combobox.tsx  ConfirmDialog.tsx  DestructiveButton.tsx  Dropdown.tsx  ErrorBoundary.tsx  LaunchSpinner.tsx  ModalOverlay.test.tsx  ModalOverlay.tsx  SuggestedInput.test.tsx  SuggestedInput.tsx  YoloField.tsx  contextMenu.test.ts  contextMenu.ts  gitBadge.test.ts  gitBadge.ts  hintPosition.ts  icons.tsx  inputProps.ts  useEscape.ts  useSaveShortcut.ts  useScrollPaging.ts  useTransient.ts
src/workspace/: AgentDialog.tsx  TerminalCountTiles.test.tsx  TerminalCountTiles.tsx  (+5 more)
(+338 files in other folders)
