[package]
name = "keepdeck"
version = "0.6.11"
description = "Desktop deck for a fleet of coding agents."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "keepdeck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keepdeck-pty = { path = "../crates/keepdeck-pty" }
keepdeck-git = { path = "../crates/keepdeck-git" }
keepdeck-agents = { path = "../crates/keepdeck-agents" }
keepdeck-history = { path = "../crates/keepdeck-history" }
notify = "6"
infer = "0.19.0"
tauri-plugin-opener = "2.5.4"
image = { version = "0.25", default-features = false, features = ["png"] }
log = "0.4"
tauri-plugin-log = "2"

