[package]
name = "keepdeck"
version = "0.13.2"
description = "Desktop deck for a fleet of coding agents."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "keepdeck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keepdeck-pty = { path = "../crates/keepdeck-pty" }
keepdeck-git = { path = "../crates/keepdeck-git" }
keepdeck-env = { path = "../crates/keepdeck-env" }
notify = "6"
infer = "0.19.0"
tauri-plugin-opener = "2.5.4"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
image = { version = "0.25", default-features = false, features = ["png"] }
log = "0.4"
tauri-plugin-log = "2"
# `.kdplugin` containers are read-only, STORED-only zips (see
# docs/plugin-container.md / scripts/pack-plugin.mjs — the packer never
# writes a compressed entry). So every optional codec the crate ships by
# default (deflate, deflate64, bzip2, lzma, ppmd, zstd, xz) is dead weight;
# so is `aes-crypto` (containers carry no encryption) and `time` (only
# needed for a `DateTime` conversion API we never call — timestamps are
# pinned/ignored, same as the packer). `default-features = false` with an
# empty feature list keeps just the mandatory core: central-directory
# parsing, STORED read/write, and `unix_mode()`/`is_symlink()` for the
# symlink-entry guard — everything `plugins_fs.rs`'s container validation
# needs. A bonus of the trim: an entry using a codec we didn't compile in
# simply fails to read (metadata like name/size is still always available
# from the central directory, no codec needed) rather than silently
# decoding — one less way a malicious archive could smuggle a codec-
# specific bomb past the size caps `plugins_fs.rs` checks on the way in.
zip = { version = "8.6", default-features = false }
# Bridge run-dir names (`bridge.rs`); already in the tree transitively.
uuid = { version = "1", features = ["v4"] }
keepdeck-voice = { path = "../crates/keepdeck-voice" }
# Explicit mic-permission check/request (AVCaptureDevice): in dev the OS
# does NOT reliably prompt on CoreAudio stream start and silently delivers
# zeros instead — the explicit request is what makes the prompt appear.
tauri-plugin-macos-permissions = "2"
# Voice model downloads (streaming to disk with progress); rustls, no
# system TLS surprises across macOS versions.
ureq = "2"
# Parakeet ships as a tar.gz bundle (HF's Xet CDN 403s anonymous downloads,
# so the archive mirror is the reliable source): gzip + tar to unpack it,
# sha2 to hold the payload to its published checksum.
flate2 = "1"
tar = "0.4"
sha2 = "0.10"

# Our own AVCaptureDevice request with a REAL completion block (the plugin's
# request passes a nil handler, which fails to raise the prompt in dev):
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
block2 = "0.6"
objc2-foundation = "0.3"

[dev-dependencies]
tempfile = "3"

