[package]
name = "keepdeck-history"
version = "0.1.0"
edition = "2021"
description = "Read-only discovery over the on-disk session stores of the supported coding agents."

[dependencies]
serde_json = "1"
# Bundled so reading opencode's SQLite store never depends on a system libsqlite.
rusqlite = { version = "0.32", features = ["bundled"] }
