[package]
name = "keepdeck-pty"
version = "0.1.0"
edition = "2021"
description = "PTY-backed session process layer for KeepDeck."

[dependencies]
portable-pty = "0.9"
keepdeck-env = { path = "../keepdeck-env" }

# SIGTERM→SIGKILL escalation on kill (Unix only).
[target.'cfg(unix)'.dependencies]
libc = "0.2"
