[package]
name = "keepdeck-voice"
version = "0.1.0"
edition = "2021"
description = "Local voice capture and speech-to-text for KeepDeck: cpal microphone capture, resampling, and whisper.cpp inference."

[dependencies]
cpal = "0.16"

# Parakeet TDT via ONNX Runtime — Apple Silicon ONLY: ort ships no prebuilt
# onnxruntime for x86_64-apple-darwin (the Intel release leg fails to link),
# and building ORT from source in CI isn't worth it for a dying arch. Whisper
# (below) compiles from source and covers Intel. `aarch64` is Apple Silicon
# here since the app targets macOS.
[target.'cfg(target_arch = "aarch64")'.dependencies]
parakeet-rs = "0.3.6"

# whisper.cpp via FFI; Metal keeps inference on the GPU on Apple Silicon.
# (whisper-rs lives on Codeberg now — the GitHub mirror is archived.)
[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.16", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
whisper-rs = "0.16"
